--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/otkhwae/argocd-tut.git
     targetRevision: HEAD
     path: dev
   destination: 
@@ -21,3 +21,4 @@ spec:
     automated:
       selfHeal: true
       prune: true
+
